--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+language: node_js
+node_js:
+  - "0.10.31"
+before_install:
+  - "curl -L http://git.io/ejPSng | /bin/sh"
+env:
+  - TEST_COMMAND=meteor
+
 before_deploy: "curl https://install.meteor.com/ | sh"
 deploy:
   provider: releases
