moved publish to before_deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,12 @@ before_install:
 env:
   - TEST_COMMAND=meteor
 
-before_deploy: "curl https://install.meteor.com/ | sh"
+before_deploy:
+  - "curl https://install.meteor.com/ | sh"
+  - ./meteor/publish.sh
 deploy:
+  provider: releases
   skip_cleanup: true
   on:
     tags: true
     all_branches: true
-after_deploy:
-  - ./meteor/publish.sh
